--- a/.github/workflows/deploy_page.yml
+++ b/.github/workflows/deploy_page.yml
@@ -36,7 +36,7 @@ jobs:
           node-version: 20
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --no-lockfile
       - name: Build
         run: yarn build
       - name: Setup Pages
